CSPC62-CompilerDesign/Compiler/Syntax Analysis/y.output
Terminals unused in grammar

    POWER
    UNARYOP
    START
    END
    COMMENT
    '+'
    '-'
    '^'
    '*'
    '/'
    '%'


State 111 conflicts: 2 reduce/reduce
State 118 conflicts: 2 reduce/reduce
State 154 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationlist main

    2 declarationlist: declaration declarationlist
    3                | declaration

    4 main: MAIN '$' statementlist '$'
    5     | ε

    6 declaration: function_definition
    7            | variable_declaration

    8 function_definition: FUNC datatype ID '(' params ')' '$' statementlist '$'

    9 variable_declaration: DECLARE datatype init_dec ';'

   10 init_dec: ID simpleexpression
   11         | ID

   12 params: paramlist
   13       | ε

   14 paramlist: datatype ID
   15          | paramlist ',' datatype ID

   16 datatype: REAL
   17         | CHAR
   18         | STRING
   19         | BOOLEAN

   20 expression: SET ID simpleexpression
   21           | simpleexpression

   22 simpleexpression: simpleexpression OR_RELOP andexpression
   23                 | andexpression

   24 andexpression: andexpression AND_RELOP unaryrelexpression
   25              | unaryrelexpression

   26 unaryrelexpression: NOT_RELOP unaryrelexpression
   27                   | relexpression

   28 relexpression: relexpression RELOP sumexpression
   29              | sumexpression

   30 sumexpression: sumexpression SUMOP term
   31              | term

   32 term: term MULOP unaryexpression
   33     | unaryexpression

   34 unaryexpression: SUMOP unaryexpression
   35                | factor

   36 factor: immutable
   37       | mutable

   38 immutable: ID

   39 mutable: '(' expression ')'
   40        | CONSTANT
   41        | call
   42        | NUMBER
   43        | CHAR_CONSTANT
   44        | TRUE_
   45        | FALSE_

   46 call: ID '(' args ')'

   47 args: arglist
   48     | ε

   49 arglist: arglist ',' expression
   50        | expression

   51 statementlist: statement statementlist
   52              | statement

   53 statement: expressionstmt
   54          | iterationstmt
   55          | returnstmt
   56          | breakstmt
   57          | continuestmt
   58          | selectionstmt
   59          | labeledstmt
   60          | outputstatement
   61          | inputstatement
   62          | funccallstmt

   63 funccallstmt: SET ID call

   64 returnstmt: RETURN ';'
   65           | RETURN expression ';'

   66 breakstmt: BREAK ';'

   67 continuestmt: CONTINUE ';'

   68 selectionstmt: IF '(' simpleexpression ')' '$' statementlist '$'
   69              | IF '(' simpleexpression ')' '$' statementlist '$' ELSE '$' statementlist '$'
   70              | IF '(' simpleexpression ')' '$' statementlist '$' ELIF '(' simpleexpression ')' '$' statementlist '$' ELSE '$' statementlist '$'
   71              | SWITCH '(' simpleexpression ')' '$' statementlist '$'

   72 labeledstmt: CASE '(' simpleexpression ')' '$' statementlist '$' labeledstmt
   73            | DEFAULT '$' statementlist '$'
   74            | CASE '(' simpleexpression ')' '$' statementlist '$'

   75 iterationstmt: LOOP '(' simpleexpression ')' '$' statementlist '$'

   76 expressionstmt: expression ';'
   77               | ';'

   78 outputstatement: OUTPUT '(' outvariable ')'

   79 outvariable: outvariable ',' value
   80            | value
   81            | expression

   82 value: ID

   83 inputstatement: SET ID INPUT '(' input_value ')' ';'

   84 input_value: CONSTANT
   85            | ε


Terminals, with rules where they appear

    $end (0) 0
    '$' (36) 4 8 68 69 70 71 72 73 74 75
    '%' (37)
    '(' (40) 8 39 46 68 69 70 71 72 74 75 78 83
    ')' (41) 8 39 46 68 69 70 71 72 74 75 78 83
    '*' (42)
    '+' (43)
    ',' (44) 15 49 79
    '-' (45)
    '/' (47)
    ';' (59) 9 64 65 66 67 76 77 83
    '^' (94)
    error (256)
    ID (258) 8 10 11 14 15 20 38 46 63 82 83
    CONSTANT (259) 40 84
    FUNC (260) 8
    POWER (261)
    CHAR_CONSTANT (262) 43
    SET (263) 20 63 83
    REAL (264) 16
    CHAR (265) 17
    STRING (266) 18
    BOOLEAN (267) 19
    LOOP (268) 75
    IF (269) 68 69 70
    ELSE (270) 69 70
    ELIF (271) 70
    CASE (272) 72 74
    DECLARE (273) 9
    BREAK (274) 66
    RETURN (275) 64 65
    CONTINUE (276) 67
    DEFAULT (277) 73
    TRUE_ (278) 44
    FALSE_ (279) 45
    RELOP (280) 28
    OR_RELOP (281) 22
    AND_RELOP (282) 24
    NOT_RELOP (283) 26
    MULOP (284) 32
    UNARYOP (285)
    START (286)
    END (287)
    SWITCH (288) 71
    NUMBER (289) 42
    OUTPUT (290) 78
    INPUT (291) 83
    SUMOP (292) 30 34
    COMMENT (293)
    MAIN (294) 4


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1
        on right: 0
    declarationlist (53)
        on left: 2 3
        on right: 1 2
    main (54)
        on left: 4 5
        on right: 1
    declaration (55)
        on left: 6 7
        on right: 2 3
    function_definition (56)
        on left: 8
        on right: 6
    variable_declaration (57)
        on left: 9
        on right: 7
    init_dec (58)
        on left: 10 11
        on right: 9
    params (59)
        on left: 12 13
        on right: 8
    paramlist (60)
        on left: 14 15
        on right: 12 15
    datatype (61)
        on left: 16 17 18 19
        on right: 8 9 14 15
    expression (62)
        on left: 20 21
        on right: 39 49 50 65 76 81
    simpleexpression (63)
        on left: 22 23
        on right: 10 20 21 22 68 69 70 71 72 74 75
    andexpression (64)
        on left: 24 25
        on right: 22 23 24
    unaryrelexpression (65)
        on left: 26 27
        on right: 24 25 26
    relexpression (66)
        on left: 28 29
        on right: 27 28
    sumexpression (67)
        on left: 30 31
        on right: 28 29 30
    term (68)
        on left: 32 33
        on right: 30 31 32
    unaryexpression (69)
        on left: 34 35
        on right: 32 33 34
    factor (70)
        on left: 36 37
        on right: 35
    immutable (71)
        on left: 38
        on right: 36
    mutable (72)
        on left: 39 40 41 42 43 44 45
        on right: 37
    call (73)
        on left: 46
        on right: 41 63
    args (74)
        on left: 47 48
        on right: 46
    arglist (75)
        on left: 49 50
        on right: 47 49
    statementlist (76)
        on left: 51 52
        on right: 4 8 51 68 69 70 71 72 73 74 75
    statement (77)
        on left: 53 54 55 56 57 58 59 60 61 62
        on right: 51 52
    funccallstmt (78)
        on left: 63
        on right: 62
    returnstmt (79)
        on left: 64 65
        on right: 55
    breakstmt (80)
        on left: 66
        on right: 56
    continuestmt (81)
        on left: 67
        on right: 57
    selectionstmt (82)
        on left: 68 69 70 71
        on right: 58
    labeledstmt (83)
        on left: 72 73 74
        on right: 59 72
    iterationstmt (84)
        on left: 75
        on right: 54
    expressionstmt (85)
        on left: 76 77
        on right: 53
    outputstatement (86)
        on left: 78
        on right: 60
    outvariable (87)
        on left: 79 80 81
        on right: 78 79
    value (88)
        on left: 82
        on right: 79 80
    inputstatement (89)
        on left: 83
        on right: 61
    input_value (90)
        on left: 84 85
        on right: 83


State 0

    0 $accept: • program $end

    FUNC     shift, and go to state 1
    DECLARE  shift, and go to state 2

    program               go to state 3
    declarationlist       go to state 4
    declaration           go to state 5
    function_definition   go to state 6
    variable_declaration  go to state 7


State 1

    8 function_definition: FUNC • datatype ID '(' params ')' '$' statementlist '$'

    REAL     shift, and go to state 8
    CHAR     shift, and go to state 9
    STRING   shift, and go to state 10
    BOOLEAN  shift, and go to state 11

    datatype  go to state 12


State 2

    9 variable_declaration: DECLARE • datatype init_dec ';'

    REAL     shift, and go to state 8
    CHAR     shift, and go to state 9
    STRING   shift, and go to state 10
    BOOLEAN  shift, and go to state 11

    datatype  go to state 13


State 3

    0 $accept: program • $end

    $end  shift, and go to state 14


State 4

    1 program: declarationlist • main

    MAIN  shift, and go to state 15

    $default  reduce using rule 5 (main)

    main  go to state 16


State 5

    2 declarationlist: declaration • declarationlist
    3                | declaration •

    FUNC     shift, and go to state 1
    DECLARE  shift, and go to state 2

    $default  reduce using rule 3 (declarationlist)

    declarationlist       go to state 17
    declaration           go to state 5
    function_definition   go to state 6
    variable_declaration  go to state 7


State 6

    6 declaration: function_definition •

    $default  reduce using rule 6 (declaration)


State 7

    7 declaration: variable_declaration •

    $default  reduce using rule 7 (declaration)


State 8

   16 datatype: REAL •

    $default  reduce using rule 16 (datatype)


State 9

   17 datatype: CHAR •

    $default  reduce using rule 17 (datatype)


State 10

   18 datatype: STRING •

    $default  reduce using rule 18 (datatype)


State 11

   19 datatype: BOOLEAN •

    $default  reduce using rule 19 (datatype)


State 12

    8 function_definition: FUNC datatype • ID '(' params ')' '$' statementlist '$'

    ID  shift, and go to state 18


State 13

    9 variable_declaration: DECLARE datatype • init_dec ';'

    ID  shift, and go to state 19

    init_dec  go to state 20


State 14

    0 $accept: program $end •

    $default  accept


State 15

    4 main: MAIN • '$' statementlist '$'

    '$'  shift, and go to state 21


State 16

    1 program: declarationlist main •

    $default  reduce using rule 1 (program)


State 17

    2 declarationlist: declaration declarationlist •

    $default  reduce using rule 2 (declarationlist)


State 18

    8 function_definition: FUNC datatype ID • '(' params ')' '$' statementlist '$'

    '('  shift, and go to state 22


State 19

   10 init_dec: ID • simpleexpression
   11         | ID •

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    $default  reduce using rule 11 (init_dec)

    simpleexpression    go to state 32
    andexpression       go to state 33
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42


State 20

    9 variable_declaration: DECLARE datatype init_dec • ';'

    ';'  shift, and go to state 43


State 21

    4 main: MAIN '$' • statementlist '$'

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    SET            shift, and go to state 44
    LOOP           shift, and go to state 45
    IF             shift, and go to state 46
    CASE           shift, and go to state 47
    BREAK          shift, and go to state 48
    RETURN         shift, and go to state 49
    CONTINUE       shift, and go to state 50
    DEFAULT        shift, and go to state 51
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    SWITCH         shift, and go to state 52
    NUMBER         shift, and go to state 29
    OUTPUT         shift, and go to state 53
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31
    ';'            shift, and go to state 54

    expression          go to state 55
    simpleexpression    go to state 56
    andexpression       go to state 33
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42
    statementlist       go to state 57
    statement           go to state 58
    funccallstmt        go to state 59
    returnstmt          go to state 60
    breakstmt           go to state 61
    continuestmt        go to state 62
    selectionstmt       go to state 63
    labeledstmt         go to state 64
    iterationstmt       go to state 65
    expressionstmt      go to state 66
    outputstatement     go to state 67
    inputstatement      go to state 68


State 22

    8 function_definition: FUNC datatype ID '(' • params ')' '$' statementlist '$'

    REAL     shift, and go to state 8
    CHAR     shift, and go to state 9
    STRING   shift, and go to state 10
    BOOLEAN  shift, and go to state 11

    $default  reduce using rule 13 (params)

    params     go to state 69
    paramlist  go to state 70
    datatype   go to state 71


State 23

   38 immutable: ID •
   46 call: ID • '(' args ')'

    '('  shift, and go to state 72

    $default  reduce using rule 38 (immutable)


State 24

   40 mutable: CONSTANT •

    $default  reduce using rule 40 (mutable)


State 25

   43 mutable: CHAR_CONSTANT •

    $default  reduce using rule 43 (mutable)


State 26

   44 mutable: TRUE_ •

    $default  reduce using rule 44 (mutable)


State 27

   45 mutable: FALSE_ •

    $default  reduce using rule 45 (mutable)


State 28

   26 unaryrelexpression: NOT_RELOP • unaryrelexpression

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    unaryrelexpression  go to state 73
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42


State 29

   42 mutable: NUMBER •

    $default  reduce using rule 42 (mutable)


State 30

   34 unaryexpression: SUMOP • unaryexpression

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    unaryexpression  go to state 74
    factor           go to state 39
    immutable        go to state 40
    mutable          go to state 41
    call             go to state 42


State 31

   39 mutable: '(' • expression ')'

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    SET            shift, and go to state 75
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    expression          go to state 76
    simpleexpression    go to state 56
    andexpression       go to state 33
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42


State 32

   10 init_dec: ID simpleexpression •
   22 simpleexpression: simpleexpression • OR_RELOP andexpression

    OR_RELOP  shift, and go to state 77

    $default  reduce using rule 10 (init_dec)


State 33

   23 simpleexpression: andexpression •
   24 andexpression: andexpression • AND_RELOP unaryrelexpression

    AND_RELOP  shift, and go to state 78

    $default  reduce using rule 23 (simpleexpression)


State 34

   25 andexpression: unaryrelexpression •

    $default  reduce using rule 25 (andexpression)


State 35

   27 unaryrelexpression: relexpression •
   28 relexpression: relexpression • RELOP sumexpression

    RELOP  shift, and go to state 79

    $default  reduce using rule 27 (unaryrelexpression)


State 36

   29 relexpression: sumexpression •
   30 sumexpression: sumexpression • SUMOP term

    SUMOP  shift, and go to state 80

    $default  reduce using rule 29 (relexpression)


State 37

   31 sumexpression: term •
   32 term: term • MULOP unaryexpression

    MULOP  shift, and go to state 81

    $default  reduce using rule 31 (sumexpression)


State 38

   33 term: unaryexpression •

    $default  reduce using rule 33 (term)


State 39

   35 unaryexpression: factor •

    $default  reduce using rule 35 (unaryexpression)


State 40

   36 factor: immutable •

    $default  reduce using rule 36 (factor)


State 41

   37 factor: mutable •

    $default  reduce using rule 37 (factor)


State 42

   41 mutable: call •

    $default  reduce using rule 41 (mutable)


State 43

    9 variable_declaration: DECLARE datatype init_dec ';' •

    $default  reduce using rule 9 (variable_declaration)


State 44

   20 expression: SET • ID simpleexpression
   63 funccallstmt: SET • ID call
   83 inputstatement: SET • ID INPUT '(' input_value ')' ';'

    ID  shift, and go to state 82


State 45

   75 iterationstmt: LOOP • '(' simpleexpression ')' '$' statementlist '$'

    '('  shift, and go to state 83


State 46

   68 selectionstmt: IF • '(' simpleexpression ')' '$' statementlist '$'
   69              | IF • '(' simpleexpression ')' '$' statementlist '$' ELSE '$' statementlist '$'
   70              | IF • '(' simpleexpression ')' '$' statementlist '$' ELIF '(' simpleexpression ')' '$' statementlist '$' ELSE '$' statementlist '$'

    '('  shift, and go to state 84


State 47

   72 labeledstmt: CASE • '(' simpleexpression ')' '$' statementlist '$' labeledstmt
   74            | CASE • '(' simpleexpression ')' '$' statementlist '$'

    '('  shift, and go to state 85


State 48

   66 breakstmt: BREAK • ';'

    ';'  shift, and go to state 86


State 49

   64 returnstmt: RETURN • ';'
   65           | RETURN • expression ';'

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    SET            shift, and go to state 75
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31
    ';'            shift, and go to state 87

    expression          go to state 88
    simpleexpression    go to state 56
    andexpression       go to state 33
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42


State 50

   67 continuestmt: CONTINUE • ';'

    ';'  shift, and go to state 89


State 51

   73 labeledstmt: DEFAULT • '$' statementlist '$'

    '$'  shift, and go to state 90


State 52

   71 selectionstmt: SWITCH • '(' simpleexpression ')' '$' statementlist '$'

    '('  shift, and go to state 91


State 53

   78 outputstatement: OUTPUT • '(' outvariable ')'

    '('  shift, and go to state 92


State 54

   77 expressionstmt: ';' •

    $default  reduce using rule 77 (expressionstmt)


State 55

   76 expressionstmt: expression • ';'

    ';'  shift, and go to state 93


State 56

   21 expression: simpleexpression •
   22 simpleexpression: simpleexpression • OR_RELOP andexpression

    OR_RELOP  shift, and go to state 77

    $default  reduce using rule 21 (expression)


State 57

    4 main: MAIN '$' statementlist • '$'

    '$'  shift, and go to state 94


State 58

   51 statementlist: statement • statementlist
   52              | statement •

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    SET            shift, and go to state 44
    LOOP           shift, and go to state 45
    IF             shift, and go to state 46
    CASE           shift, and go to state 47
    BREAK          shift, and go to state 48
    RETURN         shift, and go to state 49
    CONTINUE       shift, and go to state 50
    DEFAULT        shift, and go to state 51
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    SWITCH         shift, and go to state 52
    NUMBER         shift, and go to state 29
    OUTPUT         shift, and go to state 53
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31
    ';'            shift, and go to state 54

    $default  reduce using rule 52 (statementlist)

    expression          go to state 55
    simpleexpression    go to state 56
    andexpression       go to state 33
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42
    statementlist       go to state 95
    statement           go to state 58
    funccallstmt        go to state 59
    returnstmt          go to state 60
    breakstmt           go to state 61
    continuestmt        go to state 62
    selectionstmt       go to state 63
    labeledstmt         go to state 64
    iterationstmt       go to state 65
    expressionstmt      go to state 66
    outputstatement     go to state 67
    inputstatement      go to state 68


State 59

   62 statement: funccallstmt •

    $default  reduce using rule 62 (statement)


State 60

   55 statement: returnstmt •

    $default  reduce using rule 55 (statement)


State 61

   56 statement: breakstmt •

    $default  reduce using rule 56 (statement)


State 62

   57 statement: continuestmt •

    $default  reduce using rule 57 (statement)


State 63

   58 statement: selectionstmt •

    $default  reduce using rule 58 (statement)


State 64

   59 statement: labeledstmt •

    $default  reduce using rule 59 (statement)


State 65

   54 statement: iterationstmt •

    $default  reduce using rule 54 (statement)


State 66

   53 statement: expressionstmt •

    $default  reduce using rule 53 (statement)


State 67

   60 statement: outputstatement •

    $default  reduce using rule 60 (statement)


State 68

   61 statement: inputstatement •

    $default  reduce using rule 61 (statement)


State 69

    8 function_definition: FUNC datatype ID '(' params • ')' '$' statementlist '$'

    ')'  shift, and go to state 96


State 70

   12 params: paramlist •
   15 paramlist: paramlist • ',' datatype ID

    ','  shift, and go to state 97

    $default  reduce using rule 12 (params)


State 71

   14 paramlist: datatype • ID

    ID  shift, and go to state 98


State 72

   46 call: ID '(' • args ')'

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    SET            shift, and go to state 75
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    $default  reduce using rule 48 (args)

    expression          go to state 99
    simpleexpression    go to state 56
    andexpression       go to state 33
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42
    args                go to state 100
    arglist             go to state 101


State 73

   26 unaryrelexpression: NOT_RELOP unaryrelexpression •

    $default  reduce using rule 26 (unaryrelexpression)


State 74

   34 unaryexpression: SUMOP unaryexpression •

    $default  reduce using rule 34 (unaryexpression)


State 75

   20 expression: SET • ID simpleexpression

    ID  shift, and go to state 102


State 76

   39 mutable: '(' expression • ')'

    ')'  shift, and go to state 103


State 77

   22 simpleexpression: simpleexpression OR_RELOP • andexpression

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    andexpression       go to state 104
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42


State 78

   24 andexpression: andexpression AND_RELOP • unaryrelexpression

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    unaryrelexpression  go to state 105
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 42


State 79

   28 relexpression: relexpression RELOP • sumexpression

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    sumexpression    go to state 106
    term             go to state 37
    unaryexpression  go to state 38
    factor           go to state 39
    immutable        go to state 40
    mutable          go to state 41
    call             go to state 42


State 80

   30 sumexpression: sumexpression SUMOP • term

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    term             go to state 107
    unaryexpression  go to state 38
    factor           go to state 39
    immutable        go to state 40
    mutable          go to state 41
    call             go to state 42


State 81

   32 term: term MULOP • unaryexpression

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NUMBER         shift, and go to state 29
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    unaryexpression  go to state 108
    factor           go to state 39
    immutable        go to state 40
    mutable          go to state 41
    call             go to state 42


State 82

   20 expression: SET ID • simpleexpression
   63 funccallstmt: SET ID • call
   83 inputstatement: SET ID • INPUT '(' input_value ')' ';'

    ID             shift, and go to state 23
    CONSTANT       shift, and go to state 24
    CHAR_CONSTANT  shift, and go to state 25
    TRUE_          shift, and go to state 26
    FALSE_         shift, and go to state 27
    NOT_RELOP      shift, and go to state 28
    NUMBER         shift, and go to state 29
    INPUT          shift, and go to state 109
    SUMOP          shift, and go to state 30
    '('            shift, and go to state 31

    simpleexpression    go to state 110
    andexpression       go to state 33
    unaryrelexpression  go to state 34
    relexpression       go to state 35
    sumexpression       go to state 36
    term                go to state 37
    unaryexpression     go to state 38
    factor              go to state 39
    immutable           go to state 40
    mutable             go to state 41
    call                go to state 111


State 83

   75 iterationstmt: LOOP '(' • simpleexpression ')' '$' statementlist '$'
